fix(board): reduce padding in board layout for improved spacing

--- a/assets/css/board_responsive.css
+++ b/assets/css/board_responsive.css
@@ -1,6 +1,6 @@
 @media (max-width: 1024px) {
   .board-main {
-    padding: 206px 20px 0px 260px;
+    padding: 180px 20px 0px 260px;
     height: auto;
     overflow-y: auto;
   }
